Update the version to be 0.8.6.